test/Fail/Sections-5.agda
open import Common.Prelude

test : Nat → Nat
test = _Common.Prelude.+ 2
